2009-03-08  Marco Barisione  <marco@barisione.org>

	Add two missing images to the Makefile for the libchamplain website.

	* projects.gnome.org/libchamplain/Makefile.am:

2009-03-08  Marco Barisione  <marco@barisione.org>

	Add the libchamplain website.

	* projects.gnome.org/libchamplain/*: Added.
	* configure.in:
	* projects.gnome.org/Makefile.am:
	* projects.gnome.org/index.html:

2009-03-01  Dodji Seketeli  <dodji@redhat.com>

	* projects.gnome.org/nemiver/index.html: Update for 0.6.5 release.

2009-02-27  Dodji Seketeli  <dodji@redhat.com>

	* projects.gnome.org/nemiver/index.html: Update scm info.

2009-02-24  Dodji Seketeli  <dodji@redhat.com>

	* projects.gnome.org/nemiver/index.html: The mailing list moved to
	gnome.org. Update the website accordingly.

2009-02-16  Claudio Saavedra  <csaavedra@igalia.com>

	* projects.gnome.org/gyrus/about.html:
	* projects.gnome.org/gyrus/developers.html:
	* projects.gnome.org/gyrus/downloads.html:
	* projects.gnome.org/gyrus/index.html:
	* projects.gnome.org/gyrus/screenshots.html:

	Update for gyrus 0.3.8

2009-02-05  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/friends/step2.wml: add links to each hacker listed in
	the Adopt a Hacker donation form.

2009-01-27  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/community/index.wml: mention Friends of GNOME program.

2009-01-20  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/friends/step2.wml: fix t-shirt size (no S, but XXL)

2009-01-19  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/friends/thank-you.wml: link to foundation-announce
	instead of foundation-list.

2009-01-19  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/friends/*.wml: several fixes from the text review by
	Shaun McCance. 

2009-01-16  Andreas Nilsson  <nisses.mail@home.se>

	* www.gnome.org/friends/css/proceed-button.png,
	* www.gnome.org/friends/css/donate-button.png: removed shadows
	so they align correctly with the other elements. 


2009-01-15  Andre Klapper  <a9016009@gmx.de>
