@@ -293,6 +293,42 @@
           <h3>Already baked development packages</h3>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.25/cheese-2.25.92.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.25.92
+              </a>
+              <p>
+              released on March 2nd 2009<br />
+              md5sums: 014c5646b7b2c3389dd7d281384f941f
+              </p>
+            </div>
+
+            <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.25/cheese-2.25.91.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.25.91
+              </a>
+              <p>
+              released on February 16th 2009<br />
+              md5sums: 69e302a0438c64122529cd349b7044c7
+              </p>
+            </div>
+
+            <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.25/cheese-2.25.90.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.25.90
+              </a>
+              <p>
+              released on February 2nd 2009<br />
+              md5sums: 1137d80afcc4be99c047704a70b47b59
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.25/cheese-2.25.4.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
