@@ -132,6 +132,7 @@
             <ul>
               <li><a target="_blank" href="http://www.phoronix.com/scan.php?page=article&amp;item=980&amp;num=2">Phoronix Article about Improvements in GNOME 2.22</a></li>
               <li><a target="_blank" href="http://tombuntu.com/index.php/2007/09/19/cheesy-photo-booth-like-app-for-gnome/">Tombuntu Article about Cheese</a></li>
+              <li><a target="_blank" href="http://lwn.net/Articles/316870/">LWN Article about Cheese</a></li>
             </ul>
             </div>
 
@@ -140,77 +141,37 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>March 2nd 2009</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.25.92 was released!<br/>
+          </p>
+          <a href="download">Download it</a>
+          <a href="http://mail.gnome.org/archives/gnome-announce-list/2009-March/msg00013.html">Release Notes</a>.
+
+          <h3>February 16th 2009</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.25.91 was released!<br/>
+          </p>
+          <a href="download">Download it</a>
+          <a href="http://mail.gnome.org/archives/gnome-announce-list/2009-February/msg00058.html">Release Notes</a>.
+
+          <h3>February 2nd 2009</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.25.90 was released!<br/>
+          </p>
+          <a href="download">Download it</a>
+          <a href="http://mail.gnome.org/archives/gnome-announce-list/2009-February/msg00020.html">Release Notes</a>.
+
           <h3>January 5th 2009</h3>
           <p>
           <b>Unstable</b>
-          version 2.25.4 was released!
-          New in this release
+          version 2.25.4 was released!<br/>
           </p>
-          <ul>
-            <li>only updated translations</li>
-          </ul>
           <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-January/msg00016.html">full release notes</a>)
-
-          <h3>December 16th 2008</h3>
-          <p>
-          <b>Unstable</b>
-          version 2.25.3 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>achieved GnomeGoal <a href="http://live.gnome.org/GnomeGoals/CleanupGTKIncludes">http://live.gnome.org/GnomeGoals/CleanupGTKIncludes</a></li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-December/msg00047.html">full release notes</a>)
-
-          <h3>December 1st 2008</h3>
-          <p>
-          <b>Unstable</b>
-          version 2.25.2 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>print vendor and product id while probing devices. provide some more device informations for easier bug triaging.</li>
-            <li>meet GnomeGoal <a href="http://live.gnome.org/GnomeGoals/CleanupGTKIncludes">http://live.gnome.org/GnomeGoals/CleanupGTKIncludes</a></li>
-            <li>Use gtk_show_uri to open files and xdg-open i.s.o. gnome-open</li>
-            <li>add support for cams which support only one resolution</li>
-            <li>add support for webcams which support only one resolution</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-December/msg00011.html">full release notes</a>)
-
-          <h3>November 24th 2008</h3>
-          <p>
-          <b>Stable</b>
-          version 2.24.2 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>exit correctly with unknown command line arguments</li>
-            <li>fixed some memory leaks</li>
-            <li>add support for webcams which support only one resolution</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-November/msg00051.html">full release notes</a>)
-
-          <h3>November 3rd 2008</h3>
-          <p>
-          <b>Unstable</b>
-          version 2.25.1 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>changed the default font of the countdown widget to bitstream vera sans bold</li>
-            <li>drop libgnome/libgnome-vfs dependencies</li>
-            <li>show the fullscreen toolbar always when in effects chooser mode</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-November/msg00018.html">full release notes</a>)
+          <a href="http://mail.gnome.org/archives/gnome-announce-list/2008-January/msg00016.html">Release Notes</a>.
 
         </div>
       </div><!-- bottom -->
