@@ -1,3 +1,9 @@
+2009-03-10  daniel g. siegel <dgsiegel@gmail.com>
+
+	* projects.gnome.org/cheese/download.html,
+	  projects.gnome.org/cheese/index.html: 
+	  update the cheese releases
+
 2009-03-08  Marco Barisione  <marco@barisione.org>
 
 	Add two missing images to the Makefile for the libchamplain website.
